--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,3 +15,9 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 img {
   max-width: 100%;
 }
+
+body {
+  position: fixed;
+  top: 25%;
+  left: 25%;
+}
